# spartans

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  markdown-page.html  news.html  pyproject.toml  setup.py  sitemap.xml
assets/css/: styles.60a0ea34.css  styles.7d2441db.css
assets/js/: 01a85c17.0b10b0e9.js  01a85c17.1df5cd51.js  06f623a8.8000a780.js  0d8ec3b4.f0e71b3a.js  0e384e19.1c8b5f08.js  0e384e19.e203375f.js  17896441.58de7f24.js  17896441.590c42b4.js  1be78505.01077896.js  1be78505.b86bc772.js  1f391b9e.5e6e4ff9.js  1f391b9e.f4f4c66b.js  222f6f9e.1000a84b.js  222f6f9e.5a6c8eaa.js  222f6f9e.bf055180.js  2a55ca35.1a696dd7.js  2c993223.0ea12daa.js  3720c009.22613688.js  393be207.14753e14.js  393be207.2485dfa8.js  3b8c55ea.3b3fa7aa.js  3b8c55ea.aeb6f7ac.js  3fe9cd85.468ba580.js  459.69e79958.js  55960ee5.1eb12120.js  608.7ad96b4a.js  6875c492.9e0bba4d.js  6875c492.faacb6fa.js  75.add26d47.js  7d3efde5.51b7aa2b.js  814f3328.06178f75.js  814f3328.4909126f.js  837.2c684f70.js  845.0d366b3b.js  8aa03891.9cc3192b.js  8b23051c.9aa8abd9.js  935f2afb.25cabc9e.js  935f2afb.3d3e35f8.js  935f2afb.6e3ed9dd.js  935f2afb.8ff61d3c.js  (+50 more)
docs/: installation.html  intro.html  tags.html
docs/formalism/: boltzmann-transport-theory.html  generating-collision-operators.html
docs/intro/: index.html
docs/tags/: index.html
docs/theory/: boltzmann-transport-equation.html
docs/using-spartans/: api-design.html  example-calculation.html
examples/SO3-cube-periodic-diffusive-absorbing/: clean.sh  parser.py
markdown-page/: index.html
news/: archive.html  atom.xml  index.html  rss.xml  spartans-release.html  tags.html
news/spartans-release/: index.html
news/tags/: index.html  (+2 more)
src/: H5io.h  MeshTransport.cpp  MeshTransport.h  OverlapInv.cpp  OverlapInv.h  SubTet.cpp  SubTet.h  TetLookup.cpp  TetLookup.h  Tetrahedron.cpp  Tetrahedron.h  Transport.cpp  Transport.h  TriQuad.cpp  TriQuad.h  Util.cpp  Util.h  matrixmn.h  pyb11mpi.cpp  testQuad.cpp  transport-standalone.cpp  vectorn.h
website/: docusaurus.config.js  package.json
(+70 files in other folders)
